tests/trybuild/stages/colon_alone.rs
use brood::system::schedule::stages;

type Stages = stages!{
    :
};

fn main() {}
